force-app/main/default/objects/WhatsApp_Template__c/WhatsApp_Template__c.object-meta.xml
<CustomObject>
    <label>WhatsApp Template</label>
    <nameField>
        <displayFormat>TMPL-{0000}</displayFormat>
        <label>Template Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WhatsApp Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>