force-app/main/default/objects/WhatsApp_Template__c/fields/Body_Text__c.field-meta.xml
<CustomField>
    <fullName>Body_Text__c</fullName>
    <description>Template body with {{1}} placeholders</description>
    <label>Body Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>