force-app/main/default/objects/WhatsApp_Template__c/fields/Button_JSON__c.field-meta.xml
<CustomField>
    <fullName>Button_JSON__c</fullName>
    <description>JSON array of button configurations</description>
    <label>Button JSON</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>