force-app/main/default/objects/WhatsApp_Template__c/fields/Footer_Text__c.field-meta.xml
<CustomField>
    <fullName>Footer_Text__c</fullName>
    <label>Footer Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>