force-app/main/default/objects/WhatsApp_Template__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>Template language code e.g. en_US</description>
    <label>Language</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>