force-app/main/default/objects/WhatsApp_Template__c/fields/Last_Synced__c.field-meta.xml
<CustomField>
    <fullName>Last_Synced__c</fullName>
    <description>Last sync from WhatsApp API</description>
    <label>Last Synced</label>
    <type>DateTime</type>
</CustomField>