force-app/main/default/objects/WhatsApp_Template__c/fields/Template_ID__c.field-meta.xml
<CustomField>
    <fullName>Template_ID__c</fullName>
    <description>WhatsApp template ID from Meta</description>
    <externalId>true</externalId>
    <label>Template ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>