force-app/main/default/objects/WhatsApp_Template__c/fields/Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Name__c</fullName>
    <description>WhatsApp template name identifier</description>
    <externalId>true</externalId>
    <label>Template Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>