force-app/main/default/objects/WhatsApp_Template__c/fields/Variable_Count__c.field-meta.xml
<CustomField>
    <fullName>Variable_Count__c</fullName>
    <label>Variable Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>